2007-06-15  Werner Koch  <wk@g10code.com>

	* src/gpg4win.mk.in: Add cruel hack to support gnupg2.

	* src/Makefile.am: Use --silent with most configure runs.

	* src/uninst-gnupg2.nsi, src/inst-libgnupg2.nsi: New.
	* src/uninst-libassun.nsi, src/inst-libassuan.nsi: New.
	* src/inst-libksba.nsi, src/uninst-libksba.nsi: New.
	* src/inst-libgcrypt.nsi, src/uninst-libgcrypt.nsi: New.
	* src/inst-sections.nsi: Include new installation scripts.a
	* include/config.nsi.in: Add definitions for new packages.

	* src/uninst-gnupg.nsi: Fix removal of gpgkeys helper.

2007-06-12  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpgwrap.c (main): Call _spawnv, not execv.

2007-05-25  Marcus Brinkmann  <marcus@g10code.de>

	* src/uninst-gnupg.nsi: Fix path of gpgkeys helper programs.
	Remove pub directory.
	* src/uninst-gtk+.nsi: Fix path of directory to be removed.

2007-05-24  Werner Koch  <wk@g10code.com>

	Released 1.1.0.

	* configure.ac (PREVIEWHOST): New. 
	(MANUALVERSION_NOVICES): Set to 1.0.0.

2007-05-20  Marcus Brinkmann  <marcus@g10code.de>

	* patches/glib-2.12.12/01-giowin32.patch,
	patches/glib-2.12.12/02-gspawn-w32.patch,
	patches/glib-2.12.12/03-gspawn-w32-fixup.patch: New files.
	* Makefile.am (EXTRA_DIST): Add these new files.

	* src/gpgwrap.c (build_commandline): New function.
	(main): Quote argument vector.

	* configure.ac: Comment advanced manual here as well.

2007-05-19  Marcus Brinkmann  <marcus@g10code.de>

	* autogen.sh: Fix test.
	* src/Makefile.am: Replace := by =.a 

	* packages/download.sh: Require bash due to brace expansion.

2007-05-18  Werner Koch  <wk@g10code.com>

	* src/gpgwrap.c (main): Delimit the real path from the version
	using a semicolon.

2007-05-17  Werner Koch  <wk@g10code.com>

	* src/installer.nsi (AddToPath,RemoveFromPath): New.
	* src/inst-gpa.nsi: Install gpgwrap for gpa.
	* src/inst-gnupg.nsi: Install gpgwrap for gpg, gpgv and gpgsplit.
	
	* src/gpgwrap.c: New.

	* configure.ac: Check for strip.
	(AC_CONFIG_HEADER): New.